# hugo-studio

./: .dockerignore  .gitignore  .prettierignore  CONTRIBUTING.md  DECISIONS.md  LICENSE  Makefile  README.md  ROADMAP.md  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.docker/: Dockerfile.dev
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: build.yml  release.yml
scripts/: fetch-hugo-sidecar.sh
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/app/: mod.rs  settings.rs
src-tauri/src/assets/: mod.rs
src-tauri/src/commands/: app.rs  assets.rs  config.rs  content.rs  data.rs  git.rs  health_check.rs  mod.rs  preview.rs  site.rs  theme.rs  theme_files.rs  workspace.rs
src-tauri/src/config/: cascade.rs  format.rs  json.rs  mod.rs  toml.rs  yaml.rs
src-tauri/src/content/: archetype.rs  classify.rs  create.rs  document.rs  frontmatter.rs  language.rs  mod.rs  scan.rs  schema.rs
src-tauri/src/data/: mod.rs
src-tauri/src/domain/: ids.rs  mod.rs  site.rs  workspace.rs
src-tauri/src/git/: mod.rs
src-tauri/src/hugo/: detect.rs
src-tauri/src/persistence/: workspace_store.rs
src-tauri/src/preview/: mod.rs
src-tauri/src/theme/: mod.rs
src-tauri/src/theme_files/: mod.rs
src-tauri/src/watcher/: mod.rs
src/app/: QueryProvider.tsx
src/components/ui/: alert-dialog.tsx  button.tsx
src/features/archetypes/: ArchetypesPanel.tsx
src/features/assets/: AssetImportDialog.tsx  BundleAssetsPanel.tsx
src/features/content-tree/: ContentTree.tsx  LanguageSwitcher.tsx  NewContentDialog.tsx  buildTree.ts
src/features/data/: CsvGrid.tsx  DataLibrary.tsx  csv.ts
src/features/editor/: BodyEditor.tsx  EditorView.tsx  FrontMatterForm.tsx  RichEditor.tsx  RichHtmlEditor.tsx  TagsInput.tsx
src/features/git/: CloneDialog.tsx  GitPanel.tsx
src/features/media/: MediaLibrary.tsx  MediaPickerDialog.tsx
src/features/menus/: MenuEditor.tsx
src/features/preview/: PreviewConsole.tsx  PreviewPane.tsx
src/features/settings/: SettingsDialog.tsx
src/features/site/: SiteShell.tsx
src/features/site-settings/: SiteSettingsPanel.tsx  knownFields.ts
src/features/theme/: ThemeFilesPanel.tsx
src/features/theme-mode/: ThemeToggle.tsx
src/features/theme-settings/: ThemeSettingsPanel.tsx
src/features/workspace/: AddSiteButton.tsx  SiteCard.tsx  WorkspaceScreen.tsx
src/lib/dnd/: regions.ts
src/lib/tauri/: bindings.ts  client.ts  index.ts
src/store/: preview.ts  theme.ts  workspace.ts
