[package]
name = "hugo-studio"
version = "0.1.0"
description = "Hugo Studio — desktop editor for Hugo sites"
authors = ["Hugo Studio contributors"]
edition = "2021"
rust-version = "1.78"

[lib]
name = "hugo_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "=2.0.0-rc.22", features = ["derive"] }
specta-typescript = "=0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
thiserror = "2"

[features]
# Default empty; the `codegen` feature is enabled by the dedicated codegen binary
# so that ts-bindings export does not bloat the runtime build.
default = []
