[package]
name = "hugo-studio"
version = "0.1.0"
description = "Hugo Studio — desktop editor for Hugo sites"
authors = ["Hugo Studio contributors"]
edition = "2021"
rust-version = "1.85"

[lib]
name = "hugo_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "hugo-studio"
path = "src/main.rs"

[[bin]]
name = "gen-bindings"
path = "src/bin/gen_bindings.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "=2.0.0-rc.22", features = ["derive", "uuid", "chrono"] }
specta-typescript = "=0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3"

[features]
default = []
