[package]
name = "hugo-studio"
version = "0.5.1"
description = "Hugo Studio — desktop editor for Hugo sites"
authors = ["Hugo Studio contributors"]
edition = "2021"
rust-version = "1.85"

[lib]
name = "hugo_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "hugo-studio"
path = "src/main.rs"

[[bin]]
name = "gen-bindings"
path = "src/bin/gen_bindings.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
toml = "0.8"
toml_edit = { version = "0.22", features = ["serde"] }
regex = "1"
indexmap = { version = "2", features = ["serde"] }
specta = { version = "=2.0.0-rc.22", features = ["derive", "uuid", "chrono", "serde_json"] }
specta-typescript = "=0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
notify = "6"
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }

[dev-dependencies]
tempfile = "3"

[features]
default = []
